tests/fsharp/typecheck/sigs/neg116.bsl

neg116.fs(10,44,10,45): typecheck error FS0043: The type 'Polynomial' does not match the type 'float'
